--- a/style.css
+++ b/style.css
@@ -4,26 +4,57 @@
    justify-content: center;
    align-items: center;
    text-align: center;
-   margin:140px 120px 50px 120px;
+   margin:40px 120px 50px 120px;
 }
 
-.box-container{
-   background-color: rgb(10, 100, 178);
+.box1-container{
+   background-color:greenyellow;
+   max-width: 600px;
+   height: auto;
+}
+
+.box1-container img{
+   max-width: 300px;
+   height: auto;
 }
 
 .box2-container{
-  background-color:crimson ; 
+  background-color:crimson; 
+  max-width: 600px;
+  height: auto;
+}
+
+.box2-container img{
+   max-width: 300px;
+   height: auto;
 }
 
 .box3-container{
    background-color: blue;
+   max-width: 600px;
+   
+}
+
+.box3-container img{
+   max-width: 300px;
+     height: auto;
 }
 
 .box4-container{
    background-color: aquamarine;
+   max-width: 600px;
+}
+.box4-container img{
+   max-width: 300px;
+   height: auto;
 }
 
 .box5-container{
    background-color: chartreuse;
-   
+   max-width: 600px;
+}
+
+.box5-container img{
+   max-width: 300px;
+   height: auto;
 }
