--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 .container{
    display: flex;
    flex-direction: column;
-   justify-content: space-between;
    align-items: center;
    text-align: center;
-   margin:40px 50px 50px 50px;
+   margin:20%;
    
 }
 
@@ -12,17 +11,20 @@
    width: 600px;
    padding-top: 30px;
    padding-bottom: 30px;
+    flex-wrap: wrap;
 }
 
 .box1-container{
    background-color:greenyellow;
-   flex-wrap: wrap;
    border: dashed;
    margin-bottom: 50px;
 }
 
 .box1-container img{
    max-width: 300px;
+   height: auto;
+   border-radius: 8px;
+
 
 }
 
@@ -31,7 +33,6 @@
   border-style: groove;
   border-width: 15px;
   border-color: darkblue;
-  
   margin-bottom: 50px;
   
 }
@@ -46,7 +47,7 @@
 
 .box3-container{
    background-color: blue;
-   
+   margin-bottom: 50px;
 }
 
 .box3-container img{
