--- a/style.css
+++ b/style.css
@@ -1,77 +1,74 @@
-.container{
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   text-align: center;
-   margin:20%;
-   
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin: 20%;
 }
 
-.box1-container, .box2-container, .box3-container, .box4-container, .box5-container{
-   width: 600px;
-   padding-top: 30px;
-   padding-bottom: 30px;
-    flex-wrap: wrap;
+.box1-container,
+.box2-container,
+.box3-container,
+.box4-container,
+.box5-container {
+  width: 600px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  flex-wrap: wrap;
 }
 
-.box1-container{
-   background-color:greenyellow;
-   border: dashed;
-   margin-bottom: 50px;
+.box1-container {
+  background-color: greenyellow;
+  border: dashed;
+  margin-bottom: 50px;
 }
 
-.box1-container img{
-   max-width: 300px;
-   height: auto;
-   border-radius: 8px;
-
-
+.box1-container img {
+  max-width: 300px;
+  height: auto;
+  border-radius: 8px;
 }
 
-.box2-container{
-  background-color:crimson; 
+.box2-container {
+  background-color: crimson;
   border-style: groove;
   border-width: 15px;
   border-color: darkblue;
   margin-bottom: 50px;
-  
 }
 
-.box2-container img{
-   max-width: 300px;
-   border-style: double;
-   border-width: 5px;
-   border-color: darkblue;
+.box2-container img {
+  max-width: 300px;
+  border-style: double;
+  border-width: 5px;
+  border-color: darkblue;
 }
 
-
-.box3-container{
-   background-color: blue;
-   margin-bottom: 50px;
-}
-
-.box3-container img{
-   max-width: 300px;
-    
-}
-
-.box4-container{
-   background-color: aquamarine;
+.box3-container {
+  background-color: blue;
   margin-bottom: 50px;
 }
-.box4-container img{
-   max-width: 400px;
-   height: 400px;
+
+.box3-container img {
+  max-width: 300px;
 }
 
-.box5-container{
-   background-color: chartreuse;
-   max-width: 600px;
-   gap: 50px;
+.box4-container {
+  background-color: aquamarine;
+  margin-bottom: 50px;
+}
+.box4-container img {
+  max-width: 400px;
+  height: 400px;
 }
 
-.box5-container img{
-   max-width: 300px;
-   height: 400px;
+.box5-container {
+  background-color: chartreuse;
+  max-width: 600px;
+  gap: 50px;
+}
 
+.box5-container img {
+  max-width: 300px;
+  height: 400px;
 }
